--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -472,3 +472,85 @@
   year={2021},
   publisher={PeerJ Inc.}
 }
+
+@article{imel2013meta,
+  title={Meta-analysis of dropout in treatments for posttraumatic stress disorder.},
+  author={Imel, Zac E and Laska, Kevin and Jakupcak, Matthew and Simpson, Tracy L},
+  journal={Journal of consulting and clinical psychology},
+  volume={81},
+  number={3},
+  pages={394},
+  year={2013},
+  publisher={American Psychological Association}
+}
+
+@article{cedenilla2023psychosocial,
+  title={Psychosocial Interventions for the Treatment of Cancer-Related Fatigue: An Umbrella Review},
+  author={Cedenilla Ram{\'o}n, Nieves and Calvo Arenillas, Jose Ignacio and Aranda Valero, Sandra and S{\'a}nchez Guzm{\'a}n, Alba and Moruno Miralles, Pedro},
+  journal={Current Oncology},
+  volume={30},
+  number={3},
+  pages={2954--2977},
+  year={2023},
+  publisher={MDPI}
+}
+
+@article{swan2003bupropion,
+  title={Bupropion SR and counseling for smoking cessation in actual practice: Predictors of outcome},
+  author={Swan, Gary E and Jack, Lisa M and Curry, Sue and Chorost, Michael and Javitz, Harold and McAfee, Tim and Dacey, Sara},
+  journal={Nicotine \& Tobacco Research},
+  volume={5},
+  number={6},
+  pages={911--921},
+  year={2003},
+  publisher={Society for Research on Nicotine and Tobacco}
+}
+
+@article{o2012rethinking,
+  title={Rethinking clinical trials of transcranial direct current stimulation: participant and assessor blinding is inadequate at intensities of 2mA},
+  author={O’connell, Neil E and Cossar, John and Marston, Louise and Wand, Benedict M and Bunce, David and Moseley, G Lorimer and De Souza, Lorraine H},
+  year={2012},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{andersson2020effect,
+  title={The effect of physiotherapy including frequent changes of body position and stimulation to physical activity for infants hospitalised with acute airway infections. Study protocol for a randomised controlled trial},
+  author={Andersson-Marforio, Sonja and Lundkvist Josenby, Annika and Ekvall Hansson, Eva and Hansen, Christine},
+  journal={Trials},
+  volume={21},
+  pages={1--10},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{buttery2023lung,
+  title={Lung volume reduction surgery versus endobronchial valves: a randomised controlled trial},
+  author={Buttery, Sara C and Banya, Winston and Bilancia, Rocco and Boyd, Elizabeth and Buckley, Julie and Greening, Neil J and Housley, Kay and Jordan, Simon and Kemp, Samuel V and Kirk, Alan JB and others},
+  journal={European Respiratory Journal},
+  volume={61},
+  number={4},
+  year={2023},
+  publisher={Eur Respiratory Soc}
+}
+
+@article{hrobjartsson2011blinding,
+  title={Blinding in randomized clinical trials: imposed impartiality},
+  author={Hr{\'o}bjartsson, A and Boutron, I},
+  journal={Clinical Pharmacology \& Therapeutics},
+  volume={90},
+  number={5},
+  pages={732--736},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{chiaravalloti2020efficacy,
+  title={The efficacy of the modified Story Memory Technique in progressive MS},
+  author={Chiaravalloti, Nancy D and Moore, Nancy B and DeLuca, John},
+  journal={Multiple Sclerosis Journal},
+  volume={26},
+  number={3},
+  pages={354--362},
+  year={2020},
+  publisher={SAGE Publications Sage UK: London, England}
+}
