--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -554,3 +554,27 @@
   year={2020},
   publisher={SAGE Publications Sage UK: London, England}
 }
+
+
+@article{paterson2019feasibility,
+  title={A feasibility study of a cross-diagnostic, CBT-based psychological intervention for acute mental health inpatients: Results, challenges, and methodological implications},
+  author={Paterson, Charlotte and Karatzias, Thanos and Harper, Sean and Dougall, Nadine and Dickson, Adele and Hutton, Paul},
+  journal={British Journal of Clinical Psychology},
+  volume={58},
+  number={2},
+  pages={211--230},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+
+@article{osteraas2019implementing,
+  title={Implementing a structured model for osteoarthritis care in primary healthcare: a stepped-wedge cluster-randomised trial},
+  author={{\O}ster{\aa}s, Nina and Moseng, Tuva and Bodegom-Vos, Leti van and Dziedzic, Krysia and Mdala, Ibrahim and Natvig, B{\aa}rd and R{\o}tterud, Jan Harald and Schjervheim, Unni-Berit and Vlieland, Thea Vliet and Andreassen, {\O}yvor and others},
+  journal={PLoS medicine},
+  volume={16},
+  number={10},
+  pages={e1002949},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
